--- a/arrendatario.html
+++ b/arrendatario.html
@@ -270,6 +270,9 @@
                                 <li>
                                     Tendrás acceso al inventario de las mejores inmobiliarias a nivel nacional.
                                 </li>
+                                <li>
+                                    Cuentas con la mejor seguridad en protección de datos.
+                                </li>
                             </ul>
                             <p class="text-center mt-auto">
                                 <strong>
