--- a/lenguaje.html
+++ b/lenguaje.html
@@ -276,8 +276,7 @@
         </div>
     </section>
 
-    <section>
-                
+    <section>                
         <div class="container lenginm">
             <div class="min-container">
                 <div class="accordion accordion-flush" id="accordionFlushExample">
@@ -392,7 +391,18 @@
                         </h2>
                         <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
                             <div class="accordion-body">
-                            
+                                <div class="row">
+                                    <div class="col-lg-4">
+                                        <div class="punto">                                    
+                                            <h2 class="tit">
+                                                Beneficiario
+                                            </h2>
+                                            <p>
+                                                Persona que recibe la indemnización que se paga en razón del seguro. Ésta persona es designada por el asegurado para recibir los beneficios derivados de la póliza de seguro en caso de que se presente la pérdida o daño.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
