--- a/propietario.html
+++ b/propietario.html
@@ -303,7 +303,7 @@
                                                 Por el conocimiento y experiencia de 56 años.
                                             </li>
                                             <li>
-                                                Porque más de <strong>150.000 propietarios</strong> le confían a nuestra red de inmobiliarias la 
+                                                Porque más de <strong>200.000 propietarios</strong> le confían a nuestra red de inmobiliarias la 
                                                 administración de sus propiedades, con valor superior a $12,5 billones, y cuyos cánones 
                                                 de arrendamiento están amparados a través del Seguro.
                                             </li>
@@ -410,10 +410,32 @@
                             <div class="slide">
                                 <div class="in-slide rbox">
                                     <div class="filtro"></div>
-                                    <img src="img/propietario/sl2.png" alt="" width="270" height="90">
-                                    <p>Contar con contratos de arrendamiento bien elaborados que prevengan poner en riesgo su patrimonio.</p>
+                                    <img src="img/propietario/sl1.png" alt="" width="270" height="90">
+                                    <p>Evite desgastes en la entrega y devolución de su inmueble 
+                                        y en el cobro mensual del arriendo.</p>
                                 </div>
-                            </div>             
+                            </div>
+                            <div class="slide">
+                                <div class="in-slide rbox">
+                                    <div class="filtro"></div>
+                                    <img src="img/propietario/sl2.png" alt="" width="270" height="90">
+                                    <p>Facilidad en la administración del inmueble, en caso de reparaciones y daños.</p>
+                                </div>
+                            </div>  
+                            <div class="slide">
+                                <div class="in-slide rbox">
+                                    <div class="filtro"></div>
+                                    <img src="img/propietario/sl1.png" alt="" width="270" height="90">
+                                    <p>Reciba el valor del arrendamiento mensual pague o no el inquilino.</p>
+                                </div>
+                            </div>  
+                            <div class="slide">
+                                <div class="in-slide rbox">
+                                    <div class="filtro"></div>
+                                    <img src="img/propietario/sl2.png" alt="" width="270" height="90">
+                                    <p>De ser necesario, cuente con abogados expertos quienes se encargaran de llevar los procesos jurídicos sin ningún costo y sin verse involucrado.</p>
+                                </div>
+                            </div>         
                         </div>
                     </div>
                 </div>
