--- a/home.html
+++ b/home.html
@@ -487,7 +487,7 @@
                                             Contáctenos
                                         </h5>                                        
                                         <p class="r-regularfont">
-                                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui <a href="#" class="red hred underline">Consulté aquí</a> 
+                                            <!-- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui <a href="#" class="red hred underline">Consulté aquí</a>  -->
                                         </p>
                                     </div>
                                 </div>
